--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,6 +5,14 @@
 </head>
 <body>
 	<h1>Your Pet</h1>
+	<h2> <%=pet.name %> </h2>
+	<h2> <%= pet.species %> </h2>
+	<h2> <%= pet.age %> </h2>
+	<img src=" <%= pet.img %>">
+
+	<div>
+		<a href="/pets">back</a>
+	</div>
 
 </body>
 </html>
