--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,14 @@
 	<title></title>
 </head>
 <body>
-	<h1>Create A New Pet
+	<h1>Create A New Pet!</h1>
+	<form action="/pets/create" method="POST">
+		Name: <input type="text" name="name">
+		Species Type: <input type="text" name="species">
+		Age: <input type="text" name= "age">
+		Image URL: <input type="text" name="img">
+		<button type="submit">SUBMIT</button>
+	</form>
 
 </body>
 </html>
