delete now functional

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 		
 			<a href="/pets/<%= i%>/edit">EDIT</a>
 			
-			<form action="/pets/<%= i%>?_method=DELETE" method="POST">
+			<form action="/pets/<%= item.id%>?_method=DELETE" method="POST">
 				<button type="submit">DELETE</button>
 			</form>
 			
