--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Create A Pet</title>
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 	<h1>Create A New Pet!</h1>
 	<form action="/pets/create" method="POST">
 		Name: <input type="text" name="name">
+		<br>
 		Species Type: <input type="text" name="species">
+		<br>
 		Age: <input type="text" name= "age">
+		<br>
 		Image URL: <input type="text" name="img">
+		<br>
 		<button type="submit">SUBMIT</button>
 	</form>
 
