--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -1,3 +1,50 @@
-body {
-	background-color: blue;
+@font-face {
+	font-family: 'good';
+	src: url("../fonts/good.TTF") format("truetype");
 }
+
+body {
+	display: table;
+	margin: auto;
+	text-align: center;
+	background: url("https://ak1.picdn.net/shutterstock/videos/15266911/thumb/1.jpg")
+	no-repeat center center fixed;
+	background-size: cover;
+	font-family: good;
+	font-size: 2.5em;
+}
+
+
+#break {
+	margin-bottom: 20px;
+}
+
+a {
+	color: yellow;
+}
+
+a:hover {
+	color: red;
+}
+
+button {
+	font-size: 20px;
+	font-family: good;
+	border-radius: 10%;
+	background-color: white;
+	color: red;
+	border: 4px solid white;
+}
+
+button:focus {
+	outline: 0;
+}
+
+button:active {
+	background-color: red;
+	color: white;
+	border: 4px solid red;
+}
+
+
+
