--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Your Pet's Page</title>
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 	<h1>Your Pet</h1>
-	<h2> <%=pet.name %> </h2>
-	<h2> <%= pet.species %> </h2>
-	<h2> <%= pet.age %> </h2>
+	<h2>Name: <%=pet.name %> </h2>
+	<h4>Species: <%= pet.species %> </h4>
+	<h4>Age: <%= pet.age %> </h4>
 	<img src=" <%= pet.img %>">
 
 	<div>
